tests/NormalTests/paczka2/big_fuzzy/90130105.err
Error in line 3: SwdKsI5pk A12 79,6
Error in line 7: SwdKsI5pk S735 91,3
Error in line 13: djbsB A645 72,2
Error in line 16: mGwHnggrT A722 92,7
Error in line 20: mGwHnggrT S735 90,5
Error in line 24: a2u A645 36,0
Error in line 37: djbsB A12 15,8
Error in line 38: djbsB A645 38,4
Error in line 43: djbsB A12 -2,7
Error in line 40: djbsB A12 42,1
Error in line 46: a2u A12 6,5
Error in line 45: A645 A722 97,1
Error in line 51: A645 S735 0,0
Error in line 64: SwdKsI5pk S735 10,3
Error in line 83: UCZQmxH A722 13,0
Error in line 74: mGwHnggrT A645 61,9
Error in line 94: a2u A645 2,4
Error in line 103: djbsB A12 32,6
Error in line 106: djbsB A722 5,0
Error in line 95: mGwHnggrT A12 38,2
Error in line 114: djbsB S735 19,8
Error in line 117: mGwHnggrT A645 96,7
Error in line 131: a2u AM22 89,2
Error in line 129: a2u A12 96,0
Error in line 132: a2u A722 445,1
Error in line 136: E7jRv1EW1D A722 72,3
Error in line 149: djbsB A645 16,97
Error in line 127: UCZQmxH A645 79,6
Error in line 158: A645 S735 70,6
Error in line 160: djbsB A645 10,2
Error in line 162: djbsB S735 82,9
Error in line 166: djbsB A722 39,9
Error in line 197: SwdKsI5pk A722 51,3
Error in line 204: djbsB A722 -4,5
Error in line 203: SwdKsI5pk A722 34,3
Error in line 201: djbsB A722 70,8
Error in line 219: SwdKsI5pk A12 163,1
Error in line 221: SwdKsI5pk A722 43,8
Error in line 227: mGwHnggrT S735 98,3
Error in line 230: mGwHnggrT A722 69,35
Error in line 228: mGwHnggrT A12 38,8
Error in line 229: A645 S735 80,4
Error in line 214: djbsB A645 35,4
Error in line 235: djbsB A722 97,1
Error in line 237: UCZQmxH S735 43,2
